--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@swc/core": "^1.3.26",
     "@swc/register": "^0.1.10",
     "@types/sharp": "^0.31.1",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.1",
     "bson-objectid": "^2.0.4",
     "ckeditor4-react": "^4.2.0",
@@ -38,7 +39,7 @@
     "date-fns": "^2.29.3",
     "deep-equal": "^2.2.0",
     "deepmerge": "^4.2.2",
-    "dotenv": "^8.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "1.4.0",
     "express-graphql": "0.12.0",
