--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "deep-equal": "^2.2.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-fileupload": "1.4.0",
     "express-graphql": "0.12.0",
