update config s3, mongo Atlas

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ NODE_ENV=development
 DOMAIN_URL = 
 
 DOMAIN_AEYES_URL=
+
+MONGO_URL=
+
+#S3 connect 
+S3_PROTOCOL=
+S3_DOMAIN=
+S3_REGION=
+S3_BUCKET=
