--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.400.0",
+    "@aws-sdk/lib-storage": "^3.400.0",
     "@date-io/date-fns": "^2.16.0",
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
@@ -22,6 +24,7 @@
     "@faceless-ui/scroll-info": "^1.3.0",
     "@faceless-ui/window-info": "^2.1.1",
     "@monaco-editor/react": "^4.4.6",
+    "@payloadcms/plugin-cloud-storage": "^1.0.19",
     "@swc/core": "^1.3.26",
     "@swc/register": "^0.1.10",
     "@types/sharp": "^0.31.1",
